--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
 *.xlsx
 pruebas.ipynb
+comments.md
+venv/
+
+__pycache__/
+.ipynb_checkpoints/
+.env
+.DS_Store
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.db
+.mypy_cache/
+.pytest_cache/
+.vscode/
+.idea/
+env/
+ENV/
+.envrc
+*.egg-info/
+*.log
+*.bak
+*.swp
+*.swo
+*.tmp
+*.out
+*.old
+*.orig
+*.coverage
+coverage.xml
+htmlcov/
+dist/
+build/
+site/
+node_modules/
